# M2M-Bench

./: .avcp_root  .gitignore  AGENTS.md  COMMIT_LEDGER.md  README.md  REPO_ROOT_HOUSEKEEPING_REPORT.md  ROOT_OPS_FINAL_CLEANUP_REPORT.md  ROOT_OPS_FINAL_COMMIT_LEDGER.md  VERSION.md  project.yaml  pyproject.toml  repo_root_housekeeping_actions.csv  root_ops_final_cleanup_actions.csv
Chem2Gene/: 10_Task3_AnalyzeOutputs.py  11_Task3_OutputCollect.py  12_Visualization_Task3.r  1_DataSelection.py  2_DataDescription.py  3_Task1_Pairwise_Test.py  4_Task1_Retrieval_Test.py  5_Task2_Analysis_Attribution.py  6_Visualization_Task1.r  6_Visualization_Task2.r  7_Task3_TestData_Prepare.py  8_Task3_PCA_Baseline.py  8_Task3_STATE.py  8_Task3_Tahoe-x1.py  8_Task3_UCE.py  8_Task3_geneformer.py  8_Task3_scBERT.py  8_Task3_scFoundation.py  8_Task3_scGPT.py  9_Task3_PrepareAnalysis.py  LICENSE  Manuscript_Proposal_M2M.md  Plan.md  Task3_Functions.py  functions.py
config/: config.yaml
docs/: analysis_workflow.md  api_specs.md  avcp_guidelines.md  constraints.md  data_contracts.md  decisions.md  manuscript_analysis_expansion_plan.md  manuscript_analysis_file_change_inventory.csv  manuscript_blocker_memo.md  manuscript_blueprint.md  manuscript_claim_to_evidence_map.csv  manuscript_evidence_extraction_plan.md  manuscript_gap_remediation_plan.md  manuscript_literature_positioning.md  manuscript_master.md  manuscript_panel_support_ledger.csv  manuscript_phase1_script_specs.md  manuscript_phase1_skeleton_review_note.md  manuscript_remediation_execution_note.md  manuscript_source_register.md  (+7 more)
(+145 files in other folders)
